add tbody in hw-3

--- a/html/pages/table.html
+++ b/html/pages/table.html
@@ -5,8 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>table</title>
     <link rel="shortcut icon" href="../icons/table.png" type="image/x-icon">
+
+    <style>
+        table, th, td {
+        border-collapse: separate;
+        border: 2px solid blue;
+     }
+    </style>
+
 </head>
 <body>
+<H1> TABLES </H1>
+<table style="width: 400px; height: 200px;">
+   <!--
+    <H1 style="margin: 0 auto; text-align: center";> TABLES </H1>
+   --> 
+<!--
+    <table style="width: 400px; height: 200px;margin: 0 auto; ">
+-->
+
+<tbody>
+<tr>
+    <td>1</td>
+    <td>2</td>
+    <td>3</td>
+</tr>
+
+<tr>
+    <td>4</td>
+    <td>5</td>
+    <td>6</td>
+</tr>
+</tbody>
+</table>
+
+
+
+
     <h3><a href="../index.html">Go back <img src="../icons/Back.png" width="20" height="20" alt="icon button Back"></a></h3>
 </body>
 </html>
