--- a/html/pages/table.html
+++ b/html/pages/table.html
@@ -8,40 +8,122 @@
 
     <style>
         table, th, td {
-        border-collapse: separate;
-        border: 2px solid blue;
+        border-collapse: collapse;
+        border: 2px solid rgb(0, 0, 0);
+        
      }
     </style>
 
 </head>
 <body>
 <H1> TABLES </H1>
-<table style="width: 400px; height: 200px;">
-   <!--
+<table style="width: 400px;">
+<caption>Tables</caption>
+<!--
     <H1 style="margin: 0 auto; text-align: center";> TABLES </H1>
    --> 
 <!--
     <table style="width: 400px; height: 200px;margin: 0 auto; ">
 -->
+<!---<colgroup>
+    <col span="2" style="background-color: yellow;">
+    <col style="background-color: orange;">
+</colgroup>
+-->
+
+<thead>
+ <tr style="background-color: blue;">
+    <th>1</th>
+    <th>2</th>
+    <th>3</th>
+</tr>  
+</thead>
 
 <tbody>
-<tr>
-    <td>1</td>
-    <td>2</td>
-    <td>3</td>
-</tr>
-
-<tr>
-    <td>4</td>
-    <td>5</td>
+<tr style="background-color: brown;">
+    <td style="background-color: gray;">4</td>
+    <td style="background-color: yellow;">5</td>
     <td>6</td>
 </tr>
 </tbody>
+
+<tfoot>
+<tr style="background-color: green;">
+    <td colspan="2"> 7 </td>
+    <td style="background-color: aqua;"> 9 </td>
+</tr>
+</tfoot>
 </table>
+---------------------------------------------------------------------------
+<table style="width: 300px; height: 300px; background-color: blueviolet;">
+    <thead>
+        <tr>
+            <td rowspan="3">1</td>
+            <td colspan="2">2</td>
+            <td rowspan="3">4</td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td rowspan="2">7</td>
+        </tr>
+        <tr>
+            <td>10</td>
+        </tr>
+    </thead>
+</table>
+--------------------------------------------------------
+<H2>homework-3</H2>
+<table style="width: 700px; height: 500px;">
+    <thead>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </thead>
+</table>
+--------------------------------------------------------
 
 
 
 
-    <h3><a href="../index.html">Go back <img src="../icons/Back.png" width="20" height="20" alt="icon button Back"></a></h3>
+
+
+    <h3><a href="../index.html">-- back to home --</a></h3>
 </body>
 </html>
