paint table & ints (centr) in hw-3

--- a/html/Index.html
+++ b/html/Index.html
@@ -28,8 +28,9 @@
 
     <a href="https://google.com" target="_blank">Go to google</a>
 
-    <h2><a href="./pages/table.html" <img src="icons/pages.png" width="20" height="20" alt="icon Sun">---- table ----</a></h2>
+    <h2><a href="./pages/homework-3.html">---- homework-3 ----</a></h2>
 
+    <h2><a href="./pages/table.html" >---- tables ----</a></h2>
 
 </div>
 </body>
