--- a/html/pages/table.html
+++ b/html/pages/table.html
@@ -16,11 +16,11 @@
 
 </head>
 <body>
-<H1> TABLES </H1>
-<table style="width: 400px;">
+<H1 style="margin: 0 auto; text-align: center";>TABLES</H1>
+<table style="width: 400px; margin: 0 auto;">
 <caption>Tables</caption>
 <!--
-    <H1 style="margin: 0 auto; text-align: center";> TABLES </H1>
+    
    --> 
 <!--
     <table style="width: 400px; height: 200px;margin: 0 auto; ">
@@ -54,8 +54,8 @@
 </tr>
 </tfoot>
 </table>
----------------------------------------------------------------------------
-<table style="width: 300px; height: 300px; background-color: blueviolet;">
+
+<table style="width: 300px; height: 300px; width: 400px; margin: 0 auto; background-color: blueviolet;">
     <thead>
         <tr>
             <td rowspan="3">1</td>
@@ -71,59 +71,7 @@
         </tr>
     </thead>
 </table>
---------------------------------------------------------
-<H2>homework-3</H2>
-<table style="width: 700px; height: 500px;">
-    <thead>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-    </thead>
-</table>
---------------------------------------------------------
 
-
-
-
-
-
-    <h3><a href="../index.html">-- back to home --</a></h3>
+<h3 style="text-align: center;"><a href="../index.html">-- back to home --</a></h3>
 </body>
 </html>
