delet 1,2,3,4....30 on table

--- a/html/Index.html
+++ b/html/Index.html
@@ -26,7 +26,7 @@
 
     <p><a href="about.html">about: </a><img src="icons/about.png" width="20" height="20" alt="icon About"></p>
 
-    <a href="https://google.com" target="_blank">Go to google</a>
+    <a href="https://google.com" target="blank" >Go to google </a>
 
     <h2><a href="./pages/homework-3.html">---- homework-3 ----</a></h2>
 
