--- a/html/pages/homework-3.html
+++ b/html/pages/homework-3.html
@@ -19,32 +19,32 @@
 <table style="width: 600px; height: 500px; margin: 0 auto;">
     <thead>
         <tr>
-            <td style="background-color: violet;" colspan="2">1</td>
-            <td style="width: 95px; background-color:green;" >3</td>
-            <td style="background-color:yellowgreen">4</td>
-            <td style="background-color: blueviolet">5</td>
-            <td style="background-color: aqua" rowspan="3">6</td>
+            <td style="background-color: violet;" colspan="2"></td>
+            <td style="width: 95px; background-color:green;" ></td>
+            <td style="background-color:yellowgreen"></td>
+            <td style="background-color: blueviolet"></td>
+            <td style="background-color: aqua" rowspan="3"></td>
         </tr>
 
         <tr>
-            <td style="background-color: red; width: 95px" rowspan="2">7</td>
-            <td style="background-color: brown">8</td>
-            <td style="background-color: yellow" colspan="3" rowspan="2">9</td>
+            <td style="background-color: red; width: 95px" rowspan="2"></td>
+            <td style="background-color: brown"></td>
+            <td style="background-color: yellow" colspan="3" rowspan="2"></td>
         </tr>
 
         <tr>
-            <td style="background-color: blueviolet">14</td>
+            <td style="background-color: blueviolet"></td>
         </tr>
 
         <tr>
-            <td style="background-color: blue" colspan="3" rowspan="2">19</td>
-            <td style="background-color: midnightblue" >22</td>
-            <td style="background-color: violet;" >23</td>
-            <td style="background-color: palegreen" rowspan="2">24</td>
+            <td style="background-color: blue" colspan="3" rowspan="2"></td>
+            <td style="background-color: midnightblue" ></td>
+            <td style="background-color: violet;" ></td>
+            <td style="background-color: palegreen" rowspan="2"></td>
         </tr>
 
         <tr>
-            <td style="background-color: pink" colspan="2">28</td>
+            <td style="background-color: pink" colspan="2"></td>
         </tr>
     </thead>
 </table>
